// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize log options 1`] = `
Object {
  "beCalled": true,
  "localError": true,
  "remoteError": true,
  "type": "pretty",
}
`;

exports[`normalize log options 2`] = `
Object {
  "beCalled": false,
  "localError": false,
  "remoteError": false,
  "type": "basic",
}
`;

exports[`normalize log options 3`] = `
Object {
  "beCalled": true,
  "localError": false,
}
`;

exports[`normalize strict options 1`] = `
Object {
  "methodNotFound": true,
  "unknownMessage": true,
}
`;

exports[`normalize strict options 2`] = `
Object {
  "methodNotFound": false,
  "unknownMessage": false,
}
`;

exports[`normalize strict options 3`] = `
Object {
  "methodNotFound": false,
  "unknownMessage": false,
}
`;

exports[`normalize strict options 4`] = `
Object {
  "methodNotFound": false,
  "unknownMessage": true,
}
`;

exports[`normalize strict options 5`] = `
Object {
  "methodNotFound": true,
  "unknownMessage": false,
}
`;

exports[`normalize strict options 6`] = `
Object {
  "methodNotFound": true,
  "unknownMessage": true,
}
`;

exports[`normalize strict options 7`] = `
Object {
  "methodNotFound": false,
}
`;

exports[`normalize strict options 8`] = `
Object {
  "methodNotFound": true,
}
`;

exports[`normalize strict options 9`] = `
Object {
  "unknownMessage": false,
}
`;

exports[`normalize strict options 10`] = `
Object {
  "unknownMessage": true,
}
`;
